--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/mocha": "^8.0.3",
     "@types/yup": "^0.29.9",
     "chai": "^4.2.0",
-    "mocha": "^8.2.0"
+    "mocha": "^8.2.0",
+    "sinon": "^9.2.1"
   }
 }
