--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Discord bot framework which supports Discord.js and TypeScript.",
   "main": "index.js",
   "scripts": {
-    "test": "nyc mocha -r ts-node/register 'tests/**/*.ts'"
+    "test": "mocha --exit -r ts-node/register 'tests/**/*.ts'",
+    "coverage": "nyc npm run test"
   },
   "keywords": [
     "discord",
