--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --exit -r ts-node/register 'tests/**/*.ts'",
-    "coverage": "nyc npm run test"
+    "coverage": "nyc --reporter=html --reporter=text --reporter=text-summary npm run test"
   },
   "keywords": [
     "discord",
