--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/redis": "^2.8.28",
     "bufferutil": "^4.0.1",
     "discord.js": "^12.3.1",
+    "dotenv": "^8.2.0",
     "erlpack": "github:discord/erlpack",
     "ioredis": "^4.19.2",
     "ioredis-mock": "^5.1.0",
