--- a/package.json
+++ b/package.json
@@ -20,27 +20,22 @@
   "license": "MIT",
   "dependencies": {
     "@types/ioredis": "^4.17.7",
-    "@types/joi": "^14.3.4",
     "@types/redis": "^2.8.28",
     "bufferutil": "^4.0.1",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "ioredis": "^4.19.2",
     "ioredis-mock": "^5.1.0",
-    "joi": "^17.2.1",
-    "joi-extract-type": "^15.0.8",
     "nyc": "^15.1.0",
     "redis": "^3.0.2",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3",
-    "utf-8-validate": "^5.0.2",
-    "yup": "^0.29.3"
+    "utf-8-validate": "^5.0.2"
   },
   "devDependencies": {
     "@types/chai": "^4.2.14",
     "@types/chai-as-promised": "^7.1.3",
     "@types/mocha": "^8.0.3",
-    "@types/yup": "^0.29.9",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "mocha": "^8.2.0",
