--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "prepare": "tsc",
+    "prepare": "npm run build",
     "build": "tsc --build",
     "clean": "tsc --build --clean",
     "test": "mocha --exit -r ts-node/register 'tests/**/*.ts'",
@@ -29,11 +29,7 @@
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "ioredis": "^4.19.2",
-    "ioredis-mock": "^5.1.0",
-    "nyc": "^15.1.0",
     "redis": "^3.0.2",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.3",
     "utf-8-validate": "^5.0.2"
   },
   "devDependencies": {
@@ -42,7 +38,11 @@
     "@types/mocha": "^8.0.3",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "ioredis-mock": "^5.2.0",
     "mocha": "^8.2.0",
-    "sinon": "^9.2.1"
+    "nyc": "^15.1.0",
+    "sinon": "^9.2.1",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   }
 }
